Pom.xml changes for jenkins