@@ -18,6 +18,9 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<extentreports-version>5.0.8</extentreports-version>
+		<java.version>17.0.6</java.version>
+		<lombok.version>1.18.16</lombok.version>
+		
 	</properties>
 
 
@@ -41,7 +44,6 @@
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>6.14.3</version>
-
 		</dependency>
 		
 		 
@@ -104,7 +106,42 @@
 					<artifactId>maven-project-info-reports-plugin</artifactId>
 					<version>3.0.0</version>
 				</plugin>
+				
+				<plugin>
+		            <groupId>org.apache.maven.plugins</groupId>
+		            <artifactId>maven-compiler-plugin</artifactId>
+		            <version>3.8.1</version>
+		            <configuration>
+		                <source>${java.version}</source>
+		                <target>${java.version}</target>
+		                <fork>true</fork>
+		                <!-- this is to fix bitbucket pipeline build error due to Lombok processing -->
+		                <compilerArgs>
+		                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+		                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+		                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+		                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+		                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+		                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+		                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+		                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+		                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+		                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
+		                </compilerArgs>
+		                <annotationProcessorPaths>
+		                    <path>
+		                        <groupId>org.projectlombok</groupId>
+		                        <artifactId>lombok</artifactId>
+		                        <version>${lombok.version}</version>
+		                    </path>
+		                </annotationProcessorPaths>
+		            </configuration>
+		        </plugin>
+				
 			</plugins>
 		</pluginManagement>
 	</build>
+
+    
+
 </project>
